    o  pdot() accepts detector- and occasion-specific detection parameters
    o  MCgof() goodness-of-fit after Choo et al. (2024) DOI: 10.1111/2041-210X.14386
    o  blackbearCH new dataset of J. Laufenberg, F. van Manen and J. Clark
    o  default criterion for AIC and modelAverage changed from AICc to AIC
    o  score.table reports dAIC rather than dAICc

Other
    o  internal addzeroCH() ignores covariate dataframe with zero columns
    o  improved robustness of fxi.secr by setting occasional NaN to zero
    o  imports from mvtnorm
    o  list.secr.fit() now works with details$LLonly = TRUE
    o  some internal functions are exported
    o  trappingtransect, trappingtransectX revert to builtin integration
    
Changes in version 4.6.10 (2024-08-21)

New features or changed behaviour of old functions
    o  sim.detect() optionally computes expected counts or retains null histories

Other
    o  list.secr.fit() recovers when some fits fail
    o  added dots argument to secr.test(), passed to statfn
    o  added dots argument to sim.secr(), passed to extractfn
    o  secr.test() fit = TRUE trim keeps mask
    o  internal changes to sim.detect() may change output order
    o  include pmix in output of detectpar() from mixture models
    o  as.array method for capthist objects

Bugs fixed
    o   code for deviance of binomial model failed (broken for years)

Changes in version 4.6.9 (2024-06-29)

New features or changed behaviour of old functions
    o  none

Other
    o  added package anchor in Rd files when linking to sf and RcppParallel functions, to satisfy CRAN
    
Changes in version 4.6.8 (2024-06-28)

New features or changed behaviour of old functions
    o  none
    
Bugs fixed
    o   bug in likelihood for 'relativeD'

Changes in version 4.6.7 (2024-06-05)

New features or changed behaviour of old functions
    o  sim.popn() the covariates argument may specify a function to 
       construct covariates 